--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,15 +1,10 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Lista">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
+      <ion-item class="item-icon-right" ng-repeat="fp in fps" type="item-text-wrap" href="#/tab/fp/{{fp.id}}">
+        <h2>{{fp.nombre}}</h2>
+        <p></p>
+        
       </ion-item>
     </ion-list>
   </ion-content>
