--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -2,9 +2,7 @@
   <ion-content>
     <ion-list>
       <ion-item class="item-icon-right" ng-repeat="fp in fps" type="item-text-wrap" href="#/tab/fp/{{fp.id}}">
-        <h2>{{fp.nombre}}</h2>
-        <p></p>
-        
+        <h2>{{fp.nombre}} ({{fp.icono}})</h2>
       </ion-item>
     </ion-list>
   </ion-content>
