Listado filtrando posicion

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -7,10 +7,15 @@
 <ion-view view-title="{{fp.nombre}}">
   <ion-content class="padding">
     <img ng-src="{{fp.imagen}}" style="width: {{fp.ancho}}px; height: {{fp.alto}}px">
-    
     <p>Lat: {{fp.lat}}, Lon: {{fp.lng}}</p>
     <p>{{ fp.destomtom }} icono {{fp.icono}}</p>
     <p>fecha: {{fp.date}}</p>
     <a href="{{fp.link}}">Para más info ver en la web</a>
+    {{fp.html}}     
+    {{fp.phtml}}  
+    <div ng-bind-html="fp.html"></div>
+    <div ng-bind-html="fp.phtml"></div>
+   
+    
   </ion-content>
 </ion-view>
