--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,13 +11,13 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Lista" icon-off="ion-android-list" icon-on="ion-android-list" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Lista" icon-off="ion-android-list" icon-on="ion-android-list" href="#/tab/lista">
+    <ion-nav-view name="tab-lista"></ion-nav-view>
   </ion-tab>
 
   <!-- Map Tab -->
-  <ion-tab title="MApa" icon-off="ion-android-map" icon-on="ion-android-map" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Mapa" icon-off="ion-android-map" icon-on="ion-android-map" href="#/tab/mapa">
+    <ion-nav-view name="tab-mapa"></ion-nav-view>
   </ion-tab>
 
 
