--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
     <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
+      <div class="item item-divider">Download Status</div>
       <div class="item item-body">
         <div>
-          There is a fire in <b>sector 3</b>
+          Descargados <b>{{counter}}</b> FurgoPerfectos cerca de tí.
         </div>
       </div>
     </div>
