--- a/www/templates/tab-mapa.html
+++ b/www/templates/tab-mapa.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Mapa">
   <ion-content scroll="false" data-tap-disabled="true">
-	  <leaflet defaults="map.defaults" center="center" markers="map.markers" ng-if="map" height="100%" width="100%" ></leaflet>
+	  <leaflet defaults="map.defaults" center="center" markers="map.markers" layers="map.layers" ng-if="map" height="100%" width="100%" ></leaflet>
   </ion-content>
 </ion-view>
