refactorizando, a medio cmaino

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,6 +3,12 @@
     <div class="list card">
       <div class="item item-divider">Download Status</div>
       <div class="item item-body">
+        <div> 
+            Status : <b>{{status}} </b>
+        </div>
+        <div> 
+            Localizcion : <b>{{localizacion.lat}} </b>,<b>{{localizacion.lng}} </b>
+        </div>
         <div>
           Descargados <b>{{counter}}</b> FurgoPerfectos cerca de tí.
         </div>
